# runie

./: .EXECUTE.md.swp  .env  .env.example  .gitignore  .rustfmt.toml  AGENTS.md  ANVIL_FINAL_SPEC_v1.md  ARCHITECTURE_FIXES.md  CASES.md  Cargo.toml  DESIGN.md  ERROR_HANDLING_REVIEW.md  EXECUTE.md  FEATURE_PARITY.md  FEED.md  FEED_SYNTHESIS.md  GAP_LIST.md  GROK.md  GaugeConcepts.md  IMPL_PLAN.md  LIBRARY_REVIEW.md  LICENSE-APACHE  LICENSE-MIT  ONBOARDING_TEST_PLAN.md  PANTRY_GUIDE.md  PATTERNS.md  PROPOSAL_UI_TESTING.md  README.md  REFACTOR_PLAN.md  REVIEW.md  TASKS.md  TASKS_FINDINGS_PLAN.md  TESTING_REVIEW_ROUND4.md  TEST_PATTERNS.md  bacon.toml  build.rs  clippy.toml  config.schema.gen.json  config.schema.json  deny.toml  (+20 more)
crates/app/: Cargo.toml
crates/app/src/: lib.rs  main.r.ts  state.r.ts
crates/host/: Cargo.toml
crates/host/src/: main.rs
crates/rune/: Cargo.toml
crates/rune-cli/: Cargo.toml
crates/rune-cli/src/: cli.rs  lib.rs  main.rs  rune_main.rs
crates/rune/src/: lib.rs  main.rs  utils.rs
crates/runie/: Cargo.toml
crates/runie-acp/: Cargo.toml
crates/runie-acp/src/: client.rs  lib.rs  message.rs  protocol.rs  server.rs
crates/runie-agent/: Cargo.toml
crates/runie-agent/src/: accumulator.rs  actor.rs  agent.rs  agent_command_builder.rs  constants.rs  context7.rs  diff.rs  emit_approval_sink.rs  engine.rs  events.rs  executor.rs  grep_find.rs  headless.rs  headless_helper.rs  hook.rs  inspector.rs  lib.rs  loop_engine.rs  loop_mod.rs  mutation_queue.rs  parser.rs  path_utils.rs  permission.rs  permission_gate.rs  policy.rs  profiles.rs  provider.rs  rig_loop.rs  safety.rs  state.rs  stream_response.rs  streaming_parser.rs  subagent.rs  subagent_coordinator.rs  tests.rs  think_filter.rs  tool_registry.rs  tool_runner.rs  tools.rs  truncate.rs  (+3 more)
crates/runie-agent/tests/: grok_turn.rs  integration_test.rs  minimax_turn.rs  openai_turn.rs  permission_inheritance_tests.rs  subagent_coordinator_tests.rs
crates/runie-ai/: Cargo.toml
crates/runie-ai/src/: helpers.rs  lib.rs  model_fetcher.rs  model_registry.rs  provider.rs  session_adapter.rs  tests.rs  token_usage.rs  unified_api.rs
crates/runie-cli/: Cargo.toml
crates/runie-cli/src/: acp.rs  agent_spawn.rs  app.rs  cli.rs  commands.rs  completion.rs  constants.rs  context_loader.rs  engine_factory.rs  event_logger.rs  event_stream.rs  git.rs  headless.rs  inspect.rs  json.rs  keychain.rs  lib.rs  logging.rs  login.rs  main.rs  mcp.rs  print.rs  provider_factory.rs  scope.rs  server.rs  session_manager.rs  settings.rs  skills.rs  transport.rs  tui_run.rs
crates/runie-cli/tests/: pipeline_test.rs
crates/runie-core/: Cargo.toml  build.rs
crates/runie-core/benches/: snapshot.rs
crates/runie-core/build_scripts/: generate_event_taxonomy.py
crates/runie-core/examples/: write_config_schema.rs
crates/runie-core/src/: actor.rs  agent_phase.rs  agent_profiles.rs  agentic_loop.rs  async_io.rs  auth.rs  bash_safety.rs  build_lint.rs  bus.rs  channels.rs  clipboard_image.rs  compactor.rs  config.rs  config_migrate.rs  config_reload.rs  confirmation.rs  context.rs  diff.rs  display_width.rs  dry_run.rs  dsl.rs  edit_preview.rs  effect_payload.rs  error.rs  event.rs  event_bus.rs  file_refs.rs  file_refs_lookup_tests.rs  format.rs  fuzzy.rs  glob.rs  goal.rs  harness_skills.rs  headless.rs  headless_runtime.rs  hidden_params.rs  hooks.rs  input_history.rs  ipc.rs  keybindings.rs  (+68 more)
crates/runie-core/tests/: arch_guardrails.rs  goal_tracker_tests.rs  hook_discovery_tests.rs  orphan_reconciliation.rs  plugin_tests.rs  session_fork_tests.rs  skills_priority_tests.rs  smoke_long_conversation.sh  worktree_pool_tests.rs
crates/runie-domain/: Cargo.toml
crates/runie-domain/src/: lib.rs  placeholder.rs
crates/runie-engine/: Cargo.toml
crates/runie-engine/src/: lib.rs
crates/runie-io/: Cargo.toml
crates/runie-io/src/: lib.rs
crates/runie-json/: Cargo.toml
crates/runie-json/src/: main.rs
crates/runie-orchestrator/: Cargo.toml
crates/runie-orchestrator/src/: handoff.rs  lib.rs  orchestrator.rs  subagent.rs  task.rs
crates/runie-patterns/: Cargo.toml
crates/runie-patterns/src/: doom_loop.rs  eval_optimizer.rs  goal.rs  improve.rs  lib.rs  single.rs  swarm.rs
crates/runie-patterns/tests/: circuit_breaker_ui.rs  dag.rs  doom_loop_tests.rs  eval_optimizer.rs  improve.rs  patterns.rs  swarm.rs
crates/runie-print/: Cargo.toml
crates/runie-print/src/: main.rs
crates/runie-provider/: Cargo.toml
crates/runie-provider/proptest-regressions/: tests.txt
crates/runie-provider/src/: anthropic.rs  config.rs  config_tests.rs  factory.rs  framing.rs  http.rs  lib.rs  mock.rs  model.rs  model_client.rs  openai.rs  planner.rs  protocol.rs  replay.rs  retry.rs  retry.rs.bak  rig_adapter.rs  tests.rs
crates/runie-provider/tests/: minimax_replay.rs  openai_replay.rs  opencode_go_anthropic_replay.rs  opencode_go_openai_replay.rs
crates/runie-server/: Cargo.toml
crates/runie-server/src/: main.rs
crates/runie-term/: Cargo.toml
crates/runie-term-archive/: Cargo.toml
crates/runie-term-archive/src/: app_init.rs  main.rs  terminal_setup.rs
crates/runie-term/src/: app_init.rs  freeze_test.rs  keymap.rs  lib.rs  main.rs  share.rs  terminal_setup.rs  tests.rs
crates/runie-term/tests/: e2e.rs
crates/runie-testing/: Cargo.toml
crates/runie-testing/src/: conditional.rs  env_lock.rs  event_helpers.rs  events.rs  fixtures.rs  keystroke_dsl.rs  lib.rs  macros.rs  mock_tool_skill.rs  runner.rs  (+5 more)
crates/runie-tui/: Cargo.toml  build.rs
crates/tidy-agent/: Cargo.toml
crates/tidy-cli/: Cargo.toml
crates/tidy-orchestrator/: Cargo.toml
crates/tidy-router/: Cargo.toml
harness/: Cargo.toml  README.md  run.sh  run_bench.sh
harness/src/: lib.rs  results.rs  runner.rs
harness/tests/: channel_backpressure.rs  double_submit_dedup.rs  empty_state.rs  file_stale_edit.rs  panic_recovery.rs  state_transitions.rs  swe_bench_alloc_error.rs  swe_bench_context_compact.rs  swe_bench_error_recovery.rs  swe_bench_param_struct.rs  swe_bench_readme.rs
pantry/: Cargo.toml  pantry.toml
pantry/src/: main.rs
(+4181 files in other folders)
