[workspace]
members = ["crates/runie-core", "crates/runie-tui", "crates/runie-agent", "crates/runie-provider", "crates/runie-cli", "crates/runie-testing"]
resolver = "2"

# Default test timeout: 120 seconds. Tests exceeding this are killed.
# Override with: RUST_TEST_TIMEOUT=60 cargo test

[workspace.package]
version = "0.2.16"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm", "unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream", "events"] }

tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "macros", "process"] }
futures = "0.3"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5.0"
nix = { version = "0.31", features = ["signal"] }
base64 = "0.22"
pulldown-cmark = "0.13"
pulldown-cmark-frontmatter = "0.4"
fff-search = "0.9.5-nightly.ec57eb0"
# git2 is used transitively via fff-search; no vendored libgit2 needed.
git2 = "0.20"
unicode-width = "0.2"
textwrap = { version = "0.16", features = ["unicode-linebreak"] }
similar = "3"
diffy = "0.5"
backon = "1.6"
rmcp = { version = "1.8", features = ["schemars", "server"] }
schemars = "1.0"
jsonschema = "0.7"
regex = "1.10"
glob = "0.3"
shellexpand = "3.0"
shell-words = "1.1"
sublime_fuzzy = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
parking_lot = "0.12"
notify = "7.0"
notify-debouncer-mini = "0.5"
unicode-segmentation = "1.10"
strum = { version = "0.26", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
supports-color = "3"
supports-hyperlinks = "3"

insta = { version = "1.41", features = ["yaml"] }
tempfile = "3"
thiserror = "2"

async-trait = "0.1"
futures-util = "0.3"
ractor = "0.9"
quick-xml = "0.37"
runie-core = { path = "crates/runie-core" }
runie-agent = { path = "crates/runie-agent" }
runie-provider = { path = "crates/runie-provider" }
runie-testing = { path = "crates/runie-testing" }

# CI tooling
cargo-deny = "0.17"
cargo-machete = "0.7"



