[workspace]
members = ["crates/runie-core", "crates/runie-tui", "crates/runie-agent", "crates/runie-provider", "crates/runie-cli", "crates/runie-testing"]
resolver = "2"

# Default test timeout: 120 seconds. Tests exceeding this are killed.
# Override with: RUST_TEST_TIMEOUT=60 cargo test

[workspace.package]
version = "0.2.16"
edition = "2021"
license = "MIT OR Apache-2.0"

# Clippy lints applied across the workspace.
# File length (500 lines) is enforced by scripts/check-file-limits.sh in CI.
# Note: `cognitive_complexity` threshold uses clippy's default (10) rather than
# a custom heuristic; `too_many_lines` uses clippy's default (100 lines/file).
# Note: `too_many_lines` is prefixed with `clippy::` as it was renamed from the
# bare lint name in clippy 0.1.96.
[workspace.lints.clippy]
#too_many_lines = "warn"  # disabled: too aggressive at 100-line default; CI script handles 500-line limit
cognitive_complexity = "warn"

[workspace.dependencies]
ratatui = { version = "0.30", features = ["crossterm", "unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream", "events"] }

tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "macros", "process"] }
futures = "0.3"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"
figment = { version = "0.10", features = ["toml", "env"] }
dirs = "5.0"
path-absolutize = "1.2"
camino = { version = "1.1", features = ["serde1"] }
nix = { version = "0.31", features = ["signal"] }
base64 = "0.22"
pulldown-cmark = "0.13"
pulldown-cmark-frontmatter = "0.4"
# git2 is used for git-status checks in the search index.
git2 = "0.20"
unicode-width = "0.2"
textwrap = { version = "0.16", features = ["unicode-linebreak"] }
diffy = "0.5"
backon = "1.6"
rmcp = { version = "1.8", features = ["schemars", "server"] }
schemars = "1.0"
jsonschema = "0.7"
regex = "1.10"
glob = "0.3"
ignore = "0.4"
globset = "0.4"
shellexpand = "3.0"
shell-words = "1.1"
command-group = { version = "5", features = ["with-tokio"] }
sublime_fuzzy = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
parking_lot = "0.12"
notify = "7.0"
notify-debouncer-mini = "0.5"
unicode-segmentation = "1.10"
strum = { version = "0.26", features = ["derive", "std"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
supports-color = "3"
supports-hyperlinks = "3"

metrics = "0.22"
color-eyre = "0.6"
human-panic = "2"

insta = { version = "1.41", features = ["yaml"] }
tempfile = "3"
test-case = "3.1"
thiserror = "2"
secrecy = "0.8"
indextree = "4.1"
keyring = { version = "3", features = ["vendored"] }
ringbuffer = "0.16"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
fs2 = "0.4"
indexmap = { version = "2.8", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
ansi_colours = "1.2"
arboard = { version = "3", default-features = false }
tui-textarea = "0.7"
tiktoken = "3.5"
crokey = "1.4"
opaline = "0.4"
syntect = "5"
tui-markdown = "0.3.7"
which = "7.0"
bytesize = "1.1"
humantime = "2.3"
include_dir = "0.7"
tokio-util = "0.7"

derive_builder = "0.20"
tinytemplate = "1.0"
validator = { version = "0.20", features = ["derive"] }
async-trait = "0.1"
ractor = "0.9"
quick-xml = "0.37"
runie-core = { path = "crates/runie-core" }
runie-agent = { path = "crates/runie-agent" }
runie-provider = { path = "crates/runie-provider" }
runie-testing = { path = "crates/runie-testing" }

# Provider-specific dependencies (hoisted to workspace for consistency)
async-stream = "0.3"
reqwest-eventsource = "0.6"

# Dev-only dependencies
wiremock = "0.6"




