[package]
name = "runie-harness"
version = "0.1.0"
edition = "2021"
description = "End-to-end evaluation harness for Runie agent"
license = "MIT"
repository = "https://github.com/runie/runie"

[features]
default = []
harness = []  # Enable harness-only code

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
