[package]
name = "runie-pantry"
version = "0.1.0"
edition = "2021"
default-run = "runie-pantry"

[dependencies]
runie-tui = { path = "../crates/runie-tui" }
runie-core = { path = "../crates/runie-core" }
ratatui = { workspace = true }
tui-pantry = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
