[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
protocol = {{ path = "../protocol" }}
serde = {{ version = "1", features = ["derive"] }}
serde_json = "1"

[build-dependencies]
rune = {{ path = "../../.." }}
