[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
protocol = {{ path = "../protocol" }}
ratatui = {{ workspace = true }}
crossterm = {{ workspace = true }}
serde = {{ workspace = true }}
serde_json = {{ workspace = true }}
libloading = "0.8"
