[package]
name = "rune-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rune"
path = "src/main.rs"

[[bin]]
name = "cargo-rune"
path = "src/main.rs"

[dependencies]
rune = { path = "../rune", default-features = false }
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

# For cargo subcommand integration
pager = { version = "0.16", optional = true }

[features]
default = []
cargo-subcommand = ["pager"]

[profile.release]
strip = true
lto = true
codegen-units = 1
