[package]
name = "rune-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rune"
path = "src/bin/rune.rs"
required-features = ["binary-rune"]

[[bin]]
name = "cargo-rune"
path = "src/bin/cargo_rune.rs"
required-features = ["binary-cargo"]

[lib]
name = "rune_cli"
path = "src/lib.rs"

[dependencies]
rune = { path = "../rune", default-features = false }
anyhow.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true

# For cargo subcommand integration
pager = { version = "0.16", optional = true }

[features]
default = ["binary-rune"]
cargo-subcommand = ["pager", "binary-cargo"]
binary-rune = []
binary-cargo = []

[profile.release]
strip = true
lto = true
codegen-units = 1
