[package]
name = "rune"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rune"
path = "src/lib.rs"

[dependencies]
# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
toml = "0.8"
regex = "1"

# CLI
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
