[package]
name = "runie-acp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "sync", "time", "rt-multi-thread", "macros", "io-util"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
dirs = "5"
bytes.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
