[package]
name = "runie-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
runie-core.workspace = true
runie-provider.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
fff-search.workspace = true
git2.workspace = true
schemars.workspace = true
ractor.workspace = true

[dev-dependencies]
runie-testing.workspace = true
toml.workspace = true
tempfile.workspace = true
