[package]
name = "runie-ai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
runie-core = { path = "../runie-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
genai = "0.5"
