[package]
name = "runie-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless CLI for Runie: print, json, server modes"

[[bin]]
name = "runie-headless"
path = "src/main.rs"

[dependencies]
runie-core.workspace = true
runie-agent.workspace = true
runie-provider.workspace = true
tokio = { workspace = true, features = ["io-std", "signal"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
