[package]
name = "runie-core"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[build-dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rmcp.workspace = true
schemars.workspace = true
jsonschema.workspace = true
anyhow.workspace = true
thiserror.workspace = true
diffy.workspace = true
dirs.workspace = true
base64.workspace = true
unicode-segmentation.workspace = true
toml.workspace = true
toml_edit.workspace = true
tokio.workspace = true
futures.workspace = true
pulldown-cmark.workspace = true
pulldown-cmark-frontmatter.workspace = true
quick-xml.workspace = true
unicode-width.workspace = true
textwrap.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
regex.workspace = true
glob.workspace = true
shellexpand.workspace = true
shell-words.workspace = true
sublime_fuzzy.workspace = true
strum.workspace = true
git2.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
keyring.workspace = true
secrecy = { workspace = true, features = ["serde"] }
dotenvy.workspace = true
fs2.workspace = true
indextree.workspace = true
arboard.workspace = true
which.workspace = true
ignore.workspace = true
globset.workspace = true
bytesize.workspace = true
humantime.workspace = true
include_dir.workspace = true
crokey.workspace = true
path-absolutize.workspace = true
tokio-util.workspace = true
metrics.workspace = true
tiktoken.workspace = true

[target.'cfg(unix)'.dependencies]
crossterm.workspace = true
nix.workspace = true
uuid = { version = "1", features = ["v4"] }
async-trait.workspace = true
ractor.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion = "0.5"

[[bench]]
name = "snapshot"
harness = false

[[example]]
name = "write_config_schema"
