[package]
name = "runie-domain"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []

[dependencies]
# Re-export runie-core for backward compatibility
runie-core.workspace = true

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
schemars.workspace = true
anyhow.workspace = true
similar.workspace = true
diffy.workspace = true
dirs.workspace = true
base64.workspace = true
toml.workspace = true
pulldown-cmark.workspace = true
unicode-width.workspace = true
textwrap.workspace = true
fff-search.workspace = true
git2.workspace = true
regex.workspace = true
strum.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio.workspace = true
runie-protocol.workspace = true
unicode-segmentation.workspace = true
