[package]
name = "runie-engine"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
runie-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
fff-search.workspace = true
git2.workspace = true

[dev-dependencies]
tempfile.workspace = true
