[package]
name = "runie-io"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
# Enable migration from redb session files (can be disabled to reduce dependencies)
redb-migration = ["dep:redb"]

[dependencies]
# Re-export domain types
runie-domain.workspace = true
runie-core.workspace = true

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tokio.workspace = true
futures.workspace = true
ractor.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tempfile.workspace = true
tracing.workspace = true
runie-protocol.workspace = true
schemars.workspace = true
similar.workspace = true
diffy.workspace = true
base64.workspace = true
fff-search.workspace = true
git2.workspace = true
dirs.workspace = true
regex.workspace = true
strum.workspace = true
toml.workspace = true
pulldown-cmark.workspace = true
unicode-width.workspace = true
textwrap.workspace = true
rmcp.workspace = true
unicode-segmentation.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
redb = { version = "2", optional = true }

[target.'cfg(unix)'.dependencies]
crossterm.workspace = true
nix.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
runie-macros.workspace = true
