[package]
name = "runie-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
runie-core.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
backon.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
futures.workspace = true
toml.workspace = true
dotenvy.workspace = true

async-stream.workspace = true
async-trait.workspace = true
reqwest-eventsource.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
runie-testing.workspace = true
wiremock.workspace = true
