[package]
name = "runie-provider"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["openai"]
openai = []
mock = []
replay = []

[dependencies]
runie-core.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
backon.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
futures.workspace = true
toml.workspace = true
dotenvy.workspace = true
secrecy.workspace = true
regex.workspace = true
bytes.workspace = true
thiserror.workspace = true

async-stream.workspace = true
async-trait.workspace = true
reqwest-eventsource.workspace = true

[dev-dependencies]
test-case.workspace = true
insta.workspace = true
tempfile.workspace = true
runie-testing = { workspace = true, features = ["provider"] }
wiremock.workspace = true
proptest.workspace = true
# Raw-TCP mock SSE servers in streaming tests need net + io-util (feature-
# unified with the lib tokio dependency; harmless).
tokio = { workspace = true, features = ["net", "io-util"] }
