[package]
name = "runie-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "runie-server"
path = "src/main.rs"

[dependencies]
runie-core.workspace = true
runie-agent.workspace = true
runie-provider.workspace = true
runie-protocol.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std", "io-util", "net", "signal"] }

[dev-dependencies]
